--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.11.2",
         "@tailwindcss/vite": "^4.1.18",
         "clsx": "^2.1.1",
         "eslint-plugin-prettier": "^5.5.5",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-redux": "^9.2.0",
         "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.1.18"
     },
