--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "react-redux": "^9.2.0",
+        "react-router": "^7.13.0",
         "redux-persist": "^6.0.0",
         "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.1.18"
