--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "printWidth": 120,
     "semi": false,
     "singleQuote": true,
-    "arrowParens": "always"
+    "arrowParens": "always",
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
