--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# env files (can opt-in for committing if needed)
+.env*.local
+
+.env
+.env.*
+#ignore all env files in the project except .env.example
+!*.env.example
