--- a/package.json
+++ b/package.json
@@ -10,26 +10,38 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.2.2",
         "@reduxjs/toolkit": "^2.11.2",
         "@tailwindcss/vite": "^4.1.18",
+        "@tanstack/react-query": "^5.90.20",
+        "axios": "^1.13.4",
         "clsx": "^2.1.1",
-        "eslint-plugin-prettier": "^5.5.5",
+        "framer-motion": "^12.29.3",
+        "lucide-react": "^0.563.0",
+        "moment-timezone": "^0.6.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-hook-form": "^7.71.1",
+        "react-modal": "^3.16.3",
         "react-redux": "^9.2.0",
         "react-router": "^7.13.0",
         "redux-persist": "^6.0.0",
+        "sonner": "^2.0.7",
         "tailwind-merge": "^3.4.0",
-        "tailwindcss": "^4.1.18"
+        "tailwindcss": "^4.1.18",
+        "tippy.js": "^6.3.7",
+        "zod": "^4.3.6"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
+        "@tanstack/eslint-plugin-query": "^5.91.4",
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
         "@vitejs/plugin-react": "^5.1.1",
         "babel-plugin-react-compiler": "^1.0.0",
         "eslint": "^9.39.1",
+        "eslint-plugin-prettier": "^5.5.5",
         "eslint-plugin-react-hooks": "^7.0.1",
         "eslint-plugin-react-refresh": "^0.4.24",
         "eslint-plugin-simple-import-sort": "^12.1.1",
