--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "react-hook-form": "^7.71.1",
+        "react-infinite-scroll-component": "^6.1.1",
         "react-modal": "^3.16.3",
         "react-redux": "^9.2.0",
         "react-router": "^7.13.0",
