--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "axios": "^1.13.4",
         "clsx": "^2.1.1",
         "framer-motion": "^12.29.3",
+        "huanpenguin-tippy-react": "^1.0.1",
         "lucide-react": "^0.563.0",
         "moment-timezone": "^0.6.0",
         "react": "^19.2.0",
