--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "@tailwindcss/vite": "^4.1.18",
         "@tanstack/react-query": "^5.90.20",
         "axios": "^1.13.4",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "firebase": "^12.9.0",
         "framer-motion": "^12.29.3",
         "huanpenguin-tippy-react": "^1.0.1",
         "lucide-react": "^0.563.0",
