--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
     "semi": false,
     "singleQuote": true,
     "arrowParens": "always",
+    "endOfLine": "auto",
     "plugins": ["prettier-plugin-tailwindcss"]
 }
