--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
         "axios": "^1.13.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "embla-carousel": "^8.6.0",
+        "embla-carousel-autoplay": "^8.6.0",
+        "embla-carousel-react": "^8.6.0",
         "firebase": "^12.9.0",
         "framer-motion": "^12.29.3",
         "huanpenguin-tippy-react": "^1.0.1",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.563.0",
+        "moment": "^2.30.1",
         "moment-timezone": "^0.6.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
