--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "react-dom": "^19.2.0",
         "react-hook-form": "^7.71.1",
         "react-infinite-scroll-component": "^6.1.1",
-        "react-modal": "^3.16.3",
+        "react-modal": "^3.16.1",
         "react-redux": "^9.2.0",
         "react-router": "^7.13.0",
         "redux-persist": "^6.0.0",
@@ -48,6 +48,7 @@
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
+        "@types/react-modal": "^3.16.1",
         "@vitejs/plugin-react": "^5.1.1",
         "babel-plugin-react-compiler": "^1.0.0",
         "eslint": "^9.39.1",
