--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "@tailwindcss/vite": "^4.1.18",
         "@tanstack/react-query": "^5.90.20",
         "axios": "^1.13.4",
-        "chart.js": "^4.5.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "embla-carousel": "^8.6.0",
@@ -29,13 +28,13 @@
         "moment": "^2.30.1",
         "moment-timezone": "^0.6.0",
         "react": "^19.2.0",
-        "react-chartjs-2": "^5.3.1",
         "react-dom": "^19.2.0",
         "react-hook-form": "^7.71.1",
         "react-infinite-scroll-component": "^6.1.1",
         "react-modal": "^3.16.1",
         "react-redux": "^9.2.0",
         "react-router": "^7.13.0",
+        "recharts": "^3.7.0",
         "redux-persist": "^6.0.0",
         "socket.io-client": "^4.8.3",
         "sonner": "^2.0.7",
